After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709253 - caps: subset checks fail with duplicated values in lists
caps: subset checks fail with duplicated values in lists
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
1.2.0
Other Linux
: Normal normal
: 1.3.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-02 11:03 UTC by Sebastian Dröge (slomo)
Modified: 2013-11-13 18:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
caps: Add a testcase for subset checks on lists with duplicated items (1.39 KB, patch)
2013-10-02 11:04 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2013-10-02 11:03:49 UTC
+++ This bug was initially created as a clone of Bug #708769 +++

See attached testcase
Comment 1 Sebastian Dröge (slomo) 2013-10-02 11:04:20 UTC
Created attachment 256249 [details] [review]
caps: Add a testcase for subset checks on lists with duplicated items
Comment 2 Sebastian Dröge (slomo) 2013-11-01 15:34:01 UTC
Comment on attachment 256249 [details] [review]
caps: Add a testcase for subset checks on lists with duplicated items

Pushed but disabled for now
Comment 3 Sebastian Dröge (slomo) 2013-11-13 18:57:58 UTC
commit 52864794671e00e169b8c70ac957c9ae8efa8b80
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Nov 13 19:55:41 2013 +0100

    value: Lists with all equal elements are equal to a single value
    
    Otherwise caps containing f={X, X} are not compatible with f=X
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709253